fixed mobile dropdown menu visibility for coupon popup

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1501,7 +1501,7 @@ hr {
 	list-style-type: none;
 	top: 60px;
 	position: absolute;
-	z-index: 4;
+	z-index: 34;
 	padding-left: 0px !important;
 	display: none;
 	box-shadow: 0px 3px 3px 0px rgba(97, 94, 94, 0.15)
